--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,7 @@ services:
     build: .
     ports:
     - 8080:80
+    volumes:
+    - ./future-devops:/future-devops
+    - ./static:/static
+    - ./default.conf:/etc/nginx/conf.d/default.conf
