--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     volumes:
     - ./future-devops:/future-devops
     - ./static:/static
-    - ./default.conf:/etc/nginx/conf.d/default.conf
+    - ./nginx.conf:/etc/nginx/nginx.conf
