--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,7 @@ http {
             listen 80;
 
             location / {
+                expires off;
                 root  /static;
             }
             location /levenstein {
