--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,22 @@
 version: '3'
 
 services:
-  future-devops:
+  application:
     build: .
     environment:
     - REDIS_HOST=redis
-    ports:
-    - 8080:80
     volumes:
     - ./future-devops:/future-devops
-    - ./static:/static
-    - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
     - redis
   redis:
     image: redis:alpine
+  nginx:
+    image: nginx:alpine
+    volumes:
+    - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./static:/static:ro
+    ports:
+    - 8080:80
+    depends_on:
+    - application
