--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
                 root  /static;
             }
             location /levenstein {
-                proxy_pass http://127.0.0.1:5000/levenstein;
+                proxy_pass http://application:5000/levenstein;
             }
         }
 }
