Moved to python container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
     - REDIS_HOST=redis
     volumes:
-    - ./future-devops:/future-devops
+    - ./future-devops:/usr/src/app
     depends_on:
     - redis
   redis:
