--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,16 @@ version: '3'
 
 services:
   application:
-    build: .
+    image: express42/future-devops
+    environment:
+    - REDIS_HOST=redis
+    volumes:
+    - ./future-devops:/usr/src/app
+    depends_on:
+    - redis
+  celery-worker:
+    image: express42/future-devops
+    command: celery -A tasks worker --loglevel=info
     environment:
     - REDIS_HOST=redis
     volumes:
